css/portfolio_style.css
:root {
  --top-orng: #f0592f;
  --btm-orng: #d5552d;
  --top-blue: #44a7cd;
  /* --btm-blue: #3e98bb; */
  --btm-blue: #3b8fb0;
  --top-brick: #911e1b;
  --btm-brick: #711c19;
  --t-sec: 0.3s; /* transition time for buttons */
}

/* -------------------------------------------
HEADER STYLING 
---------------------------------------------- */
.header {
  display: table;
  position: relative;
  z-index: 300;
  width: 100%;
  height: 100%;
  background: url(../img/bg.jpg) no-repeat center center scroll;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}

/* ---------------------------------------------------------------
MAIN STYLING 
--------------------------------------------------------------- */
section {
  position: relative;
  margin-top: -57px;
  padding-top: 57px;
  height:auto !important; /* real browsers */
	min-height:100%; /* real browsers */
  text-align: center;
}

section > h1:first-of-type {
  color: antiquewhite;
  padding-top: 20px;
}

#navbar {
  background-image: linear-gradient(var(--top-orng), var(--btm-orng));
}

#logo {
  margin-top: 2px;
  margin-right: 8px;
}
a {
  transition: 0.5s;
  position: relative;
}

a::after {
  position: absolute;
  content: "";
  width: calc(100% - 16px); /* 16px = padding left and right of 8px of menu item */
  left: 8px;
  height: 3px;  /* underline height */
  top: 80%;
  background: rgba(250, 235, 215, .8); /* this is the underline  color */
  transition: transform 0.3s, color 0.3s;
  transform: scaleX(0);
  transform-origin: center;
}

a:hover {
  /* color: rgba(0, 0, 0, 1.0); */
  color: black !important;
}

a:hover::after {
  transform: scaleX(1);
  transform-origin: center;
}

#projects {
  z-index: 100;
  background-image: linear-gradient(var(--top-blue), var(--btm-blue));
}

#techSkills {
  z-index: 200;
  background-image: linear-gradient(var(--top-brick), var(--btm-brick));
}

.full-height {
  height: 100vh;
}

.skills-flex {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  width: auto;
  margin: 0% auto;
}

.skill-cell {
  margin: 10px 50px;
}

.cell-icon {
  max-height: 165px;
  border-radius: 10px;
}

.cell-title {
  color: antiquewhite
}

button {
  font-size: 1.25em;
  font-weight: bold;
  border: none;
  padding: 0.2em 1em;
  border-radius: 0.25em;
  cursor: pointer;
}

.btn-3D {
  /* Relative needed so button color changes rather than page background */
  position: relative;
  color: white;
  z-index: 1;
  box-shadow: inset 0 0 0px transparent, 3px 3px 3.5px black;
  transition: box-shadow var(--t-sec), color var(--t-sec), background var(--t-sec);
}

.btn-3D::before {
  position: absolute;
  content: "";
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: 0.25em;
  box-shadow: inset 2.5px 2.5px 1.5px black, 0 0 0px transparent;
  z-index: -1;
  transition: opacity var(--t-sec);
  opacity: 0;
}

.btn-3D:hover {
  color: black;
  box-shadow: inset 0 0 0px transparent, 0 0 0px transparent;
}

.btn-3D:hover::before {
  opacity: 1;
}

.btn-3D.btn-orng {
  background: linear-gradient(var(--top-orng), var(--btm-orng));
  margin: 0em .1em;
}

.btn-3D.btn-orng::before {
  background-image: linear-gradient(var(--btm-orng), var(--top-orng));
}

.btn-3D.btn-blue {
  background: linear-gradient(var(--top-blue), var(--btm-blue));
}

.btn-3D.btn-blue::before {
  background-image: linear-gradient(var(--btm-blue), var(--top-blue));
}

/* ---------------------------------------------------------------
                        MODAL STYLING 
   --------------------------------------------------------------- */
/** {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}*/

.xmodal-bg {
  position: fixed;
  top: 0; 
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1050;
  background: rgba(0, 0, 0, .35 );  
  opacity: 0;
  text-align: center;
  display: none;
  pointer-events: none;
  /* overflow: hidden; */
  /*
  -webkit-transition: background .5s ease-out;
  -moz-transition: background .5s ease-out;
  -o-transition: background .5s ease-out;
  transition: background .5s ease-out;
  */
}

.xmodal-bg.is-active {
  display: flex;
  align-items: flex-start;  /* Y axis when flex-direction: row */
  justify-content: center;  /* X axis when flex-direction: row */
  pointer-events: auto;
  /* overflow-y: scroll;
  scrollbar-width: none;
  -ms-overflow-style: none; */ 
  flex-wrap: wrap;  /* not needed if one item in flex container */
}
/* .xmodal-bg::-webkit-scrollbar {
  width: 0;
  height: 0;
} */
/* 
.scr-bar-hide {
  overflow-y: auto;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.scr-bar-hide::-webkit-scrollbar {
  width: 0;
  height: 0;
} */

.xmodal-container {
  width: 600px;
  margin: 77px 8px 30px;
  padding-bottom: 20px;
  position: relative;
}

/* using 'x'modal prevents conflict with Bootstrap modal styling. 
  I tried to build a custom Bootstrap import on their website with no modal features but was unsuccessful. May try again another day */
.xmodal-content {  /* Used by x-men x-women x-people x-lovers etc*/
  padding-bottom: 30px;
  /* max-height: 100%; */
  background-color: #fff;
  padding: 1em 2em;
  border: 1px solid rgba(0, 0, 0, .35 );
  border-radius: 0.5em;
  font-size: 14px;
  line-height: 1.5;
  box-shadow: 5px 5px 17px var(--top-orng);
  opacity: 0; /* so we can animate transition to visible */
  }

/* Styling for the 'X' close button */
.xclose {
  position: absolute; /* used because float impacts centering of icons */
  z-index: 1055; /* makes hover work correctly on position absolute */
  top: 0;
  right: 20px;
  font-size: 35px;
  color: #bbb;
  transition: color 0.4s ease;
}

.xclose:hover {
  cursor: pointer;
  color: #000;
}

.xmodal-hdr {
  min-height: 17px;
  border-bottom: 1.5px solid #e0e0e0; /* horizontal line */
  margin-bottom: 2em;
  padding-bottom: 5px;
}

.xmodal-hdr-icon {
  max-height: 110px;
  margin: 0 auto;
  padding: 11px 5px 2px;
  margin-bottom: 1.5em;
}

.xmodal-body-title {
  font-size: 1.6em;
  font-weight: bold;
  margin-bottom: 0.5em;
}

.xmodal-body-title, .xmodal-body {
  text-align: left;
}

.xmodal-body-txt {
  margin-bottom: 1.5em;
  line-height: 1.25;
  color: #000;
  font-size: 1.1em;
}

.xmodal-list-hdr {
  font-size: 1.25rem;
  font-weight: bold;
}

.xmodal-footer {
  margin-top: 1.5em;
  border-top: 1.5px solid #e0e0e0;  /* horizontal line */
  padding-top: 1.5em;
  padding-bottom: .6em;
}

/* These two are if you want to hide the button when displaying the modal.  Not necessary since I'm using position:fixed for the xmodal-bg which overlays the button */
.btn-open {
  display: none;
}

.btn-open.is-active {
  display: block;
}

/* -------------  Media Queries  -------- */
@media screen and (max-width: 991px) {
  #logo {
      margin-top: 8px;
  }
}
/*
@media screen and (max-height: 600px) {
  .xmodal {
    overflow-y: auto;
  }
}*/

